# raycraft

./: .gitignore  FIXES_SUMMARY.md  LICENSE  README.md  SETUP_GUIDE.md  pyproject.toml  requirements.txt  setup.sh
configs/: base.yaml  default.yaml  simple_record.yaml
configs/collect/: base.yaml  collect_wood.yaml
configs/craft/: craft_crafting_table.yaml
configs/kill/: base.yaml  kill_skeleton.yaml  kill_zombie.yaml  kill_zombie_with_record.yaml
configs/mine/: base.yaml  mine_stone.yaml
configs/smelt/: base.yaml  iron_ingot.yaml
docs/: DEPLOYMENT_GUIDE.md  HTTP_API_GUIDE.md  IMPLEMENTATION.md  architecture.md  ray-design.md
examples/: README.md  http_client_example.py  mvp1_basic_test.py  mvp1_migration_guide.py  test_batch_create.py
logs/: actor_log_20251024_071853_431228.txt  actor_log_20251029_123647_815551.txt  actor_log_20251029_123743_816049.txt  mc_simulator_log_20251029_123746.txt  mc_simulator_log_20251030_060750.txt  mc_simulator_log_20251030_061111.txt  mc_simulator_log_20251030_062344.txt  mc_simulator_log_20251030_062415.txt  mc_simulator_log_20251030_062807.txt  mc_simulator_log_20251030_081606.txt  mc_simulator_log_20251030_081952.txt  mc_simulator_log_20251030_083510.txt  mc_simulator_log_20251030_085102.txt
raycraft/: __init__.py  http_client.py  http_server.py  mc_simulator.py  utils.py
raycraft/ray/: __init__.py  actors.py  client.py  global_pool.py  pool.py
raycraft/utils/: __init__.py  action_converter.py  (+2 more)
tests/: run.sh  test_dual_action_format.py  test_http_client.py  test_http_server.py  test_parallel_performance.py  test_uuid_record.py
